# sayHi-gtk3

./: CMakeLists.txt  README.md
src/: builder.ui  sayHi-gtk3.c
